created different templates

--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
