removing unnecessary lines

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "biodata-maker-nextjs",
   "version": "0.1.0",
+  "homepage": "https://shreyk04.github.io/marathi-biodata-maker",
+
   "private": true,
   "scripts": {
     "dev": "next dev",
