--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "biodata-maker-nextjs",
   "version": "0.1.0",
   "homepage": "https://shreyk04.github.io/marathi-biodata-maker",
-
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -40,6 +39,9 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "devDependencies": {
+      "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
+    }
   }
 }
